k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devops-service
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: devops-service
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: devops-service
          image: ghcr.io/cfidrobo/pruebatcs_idrobo_cristian:latest 
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
