k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-service-svc
spec:
  selector:
    app: devops-service
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
